# TolimanWIP

./: .coverage  .gitattributes  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE.md  README.md  TheForwardsModel.py  example  extra.css  format-header.py  index.html  interpretter.py  ipynb_to_py  ipynb_to_py.rs  mkdocs.yml  objects.inv  parser.py  peter.txt  poem.txt  pyproject.toml  pytest_experiment.py  reformat-examples.py  requirements.txt  toliman.md
.assets/: background.csv
CHANGELOG/: index.html
CONTRIBUTING/: index.html
ForwardsModel/: RecoverPlateScale.ipynb  Sidelobe-Testground(1).ipynb  toliman(1).py
INSTALLATION/: index.html
LICENSE/: index.html
blog/: overview.md
blog/anaconda/: anaconda.md
blog/gh/: gh.md
blog/git/: git.md
blog/mkdocs/: mkdocs.md
blog/poetry/: poetry.md
blog/pytest/: pytest.md
blog/python/: oop.md  python.md
examples/: gradient_descent.md  hmc.md
examples/gradient_descent/: index.html
examples/hmc/: index.html
gitborkedUpdate/: Sidelobe-Testground.ipynb  toliman.py
science/: corner.ipynb  hmc.ipynb  hmc.py  optimization.ipynb
scripts/: dlux_aperture_tests.py  forwards_model.py  gaia_background_stars.py  gaia_bg_flux_sample.py  plots.py  toliman.py  types.py
search/: search_index.json
site/: 404.html
site/INSTALLATION/: index.html
site/LICENSE/: index.html
site/science/: static.ipynb
site/search/: search_index.json
site/tests/: conftest.py  test_constants.py
site/toliman/: constants.py
src/: __init__.py  alpha_centauri.py  plots.py  toliman.py
tests/: build_test.py  conftest.py  constants_test.py  pytest_test.py  test_collections.py  test_constants.py  test_io.py  test_math.py  test_toliman.py  toliman.py  toliman_test.py  toliman_test.py,cover  workflows.yml
tests/test_build/: conftest.py  test_build.py  test_https.py  test_mask.py  test_paths.py  test_phoenix.py
toliman/: __init__.py  __init__.py,cover  build.py  collections.py  constants.py  forwards_model.py  io.py  math.py  toliman.py  toliman.py,cover
(+9 files in other folders)
