[tool.poetry]
name = "toliman"
description = "A differential model of TOLIMAN telescope."
version = "0.0.1"
authors = [
    "Jordan Dennis <jdenn105@gmail.com>", 
    "Conaire Deagan", 
    "Louis Desdoigts"
]
readme = "README.md"
packages = [{include = "toliman"}]

[tool.poetry.dependencies]
python = ">=3.10"
jax = ">=0.4.1"
dLux = ">=0.1.2"
pysynphot = ">=2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

