[tool.poetry]
name = "toliman"
description = "A differential model of TOLIMAN telescope."
version = "0.0.1"
authors = [
    "Jordan Dennis <jdenn105@gmail.com>", 
    "Conaire Deagan", 
    "Louis Desdoigts"
]
readme = "README.md"
packages = [{include = "toliman"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jax = ">=0.4.1"
dLux = ">=0.9"
pysynphot = ">=2.0.0"
black = "^22.12.0"
pytest = "^7.2.1"
pytest-black = "^0.3.12"
pytest-sugar = "^0.9.6"
mkdocs = "^1.4.2"
mkdocs-simple-plugin = "2.1.2"
opt-einsum = "^3.3.0"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
pytkdocs = {version = ">=0.5.1", extras = ["numpy-style"]}
mkdocs-same-dir = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

